# snakemake-executor-plugin-ssh

./: pyproject.toml
.github/workflows/: ci.yml
src/snakemake_executor_plugin_ssh/: __init__.py  host_management.py
tests/: test_plugin.py
tests/sshserver/: Dockerfile  testkey  testkey.pub
